--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -136,6 +136,21 @@ number = {SLOA190B}
   howpublished = "http://en.wikipedia.org/wiki/RANSAC"
 }
 
+@misc{icpwiki,
+  howpublished = "http://en.wikipedia.org/wiki/Iterative\textunderscore closest\textunderscore point"
+}
+
+@InProceedings{hipoveri,
+	title = {CAD-Model Recognition and 6 DOF Pose Estimation},
+	booktitle = {ICCV 2011, 3D Representation and Recognition (3dRR11)},
+	year = {2011},
+	month = {11/2011},
+	address = {Barcelona, Spain},
+	keywords = {perception},
+	url = {http://www.eecs.umich.edu/vision/3dRR11/3dRR11.html},
+	author = {Aitor Aldoma and Nico Blodow and David Gossow and Suat Gedikli and Radu Rusu and Markus Vincze and Gary Bradski}
+}
+
 @InProceedings{ransacsurvey,
 author = {Sunglok Choi, Taemin Kim and Wonpil Yu},
 title = {Performance Evaluation of RANSAC Family},
